--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-    .container{
+    .container .card {
         padding: 4rem;
     }
 
@@ -109,6 +109,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 0.4rem;
+    justify-content: start;
     align-items: center;
 }
 
@@ -122,6 +123,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: start;
     row-gap: 1.6rem;
 }
 
