--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,35 @@ body {
     color: white;
     font-size: 1.4rem;
     font-weight: var(--bold);
+    transition: background-color 0.3s ease;
 }
+
+.btn-link:hover {
+    background-color: var(--green);
+    color: var(--gray-700);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
