--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
 .text-preset-1, .text-preset-2, .text-preset-2-bold {
     line-height: 150%;
     letter-spacing: 0;
+    text-align: center;
 }
 
 .text-preset-1 {
@@ -84,7 +85,7 @@ body {
     border-radius: 1.2rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 480px) {
     .container .card {
         padding: 4rem;
     }
@@ -94,7 +95,7 @@ body {
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
     .container{
         justify-content: center;
         padding: 0;
